--- a/style.css
+++ b/style.css
@@ -28,6 +28,8 @@ header{
 	flex-direction: column;
 	flex-wrap: wrap;
 	padding: 100px 100px;
+	width: 100%;
+	height: 100%;
 }
 
 header section { 
@@ -88,8 +90,28 @@ button{
 	color: white;
 }
 
+/* 
+@media (max-width: 1000px){
+	header{
+		padding: 20px 50px;
+	}
+} */
 
-
+/* header queries */
+@media (max-width: 1076px){
+	header{
+		/* flex-direction: row;		 */
+		padding: 50px 50px;
+	}
+	header .hero { 
+		flex-direction: column;
+		text-align: center;
+	}
+	.hero-left, .hero-right{
+		width: 80%;
+	}
+	
+}
 
 ul{
 	list-style: none;
