--- a/style.css
+++ b/style.css
@@ -36,18 +36,17 @@ header section {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	flex-wrap: wrap;
 	padding: 30px 0;
 }
 
 .hero-left{
 	width: 40%;
-	padding: 20px;
+	margin: 20px;
 }
 
 .hero-right{
 	width: 60%;
-	padding: 20px;
+	margin: 20px;
 }
 
 .hero-right img {
@@ -57,11 +56,11 @@ header section {
 h1, h2, h3{
 	font-family: 'Poppins', sans-serif;
 	font-weight: 600;
-	margin-bottom: 40px;
+	margin-bottom: 20px;
 }
 
 p{
-	margin-bottom: 40px;
+	margin-bottom: 30px;
 }
 
 a{
@@ -82,7 +81,7 @@ button{
 	padding: 15px 40px;
 	border: none;
 	background-color: white;
-	box-shadow: 1px 2px #8e8d8d;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .btn{
@@ -90,17 +89,10 @@ button{
 	color: white;
 }
 
-/* 
-@media (max-width: 1000px){
-	header{
-		padding: 20px 50px;
-	}
-} */
 
 /* header queries */
-@media (max-width: 1076px){
+@media (max-width: 1024px){
 	header{
-		/* flex-direction: row;		 */
 		padding: 50px 50px;
 	}
 	header .hero { 
@@ -113,6 +105,55 @@ button{
 	
 }
 
+
+/*-------------
+ 	Main
+-------------*/
+
+main{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	padding: 80px 0;
+}
+
+.benefit{
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	border-radius: 15px;
+	display: flex;
+	align-items: center;
+	width: 90%;
+	padding: 30px 50px;
+	margin: 20px 0;
+}
+
+.text,.image{
+	width: 50%;
+	margin: 10px 30px;
+}
+
+.image img{
+	width: 100%;
+}
+
+/* main queries */
+@media (max-width: 900px){
+	.benefit{
+		flex-direction: column;
+		text-align: center;
+	}
+	.text,.image{
+		width: 80%;
+		margin: 30px 30px;
+	}
+	.benefit.flip{
+		flex-direction: column-reverse;
+	}
+}
+
+/*-------------
+ 	Footer
+-------------*/
 ul{
 	list-style: none;
 }
