--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ main{
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	padding: 80px 0;
+	padding: 80px 0 250px 0;
 }
 
 .benefit{
@@ -150,6 +150,25 @@ main{
 		flex-direction: column-reverse;
 	}
 }
+
+/*-------------
+ 	Article
+-------------*/
+
+article div{
+	width: 70%;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	border-radius: 15px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	padding: 30px 50px;
+	margin: auto;
+	z-index: 1;
+}
+
+
+
 
 /*-------------
  	Footer
