--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ main{
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	padding: 80px 0 250px 0;
+	padding: 80px 0 150px 0;
 }
 
 .benefit{
@@ -154,25 +154,84 @@ main{
 /*-------------
  	Article
 -------------*/
-
+article{
+	display: flex;
+	justify-content: center;
+}
 article div{
-	width: 70%;
+	width: 700px;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 	border-radius: 15px;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	padding: 30px 50px;
-	margin: auto;
+	padding: 40px 50px;
 	z-index: 1;
+	position: absolute;
+	background-color: white;
+	text-align: center;
 }
 
+/* article queries */
+@media (max-width: 900px){
+	article div{
+		width: 80%;
+	}
+}
 
 
 
 /*-------------
  	Footer
 -------------*/
+footer{
+	background-color: hsl(192, 100%, 9%);
+	padding: 150px 100px 50px 100px;
+	margin-top: 120px;
+	color: white;
+}
+
+footer section{
+	display: flex;
+	justify-content: space-between;
+}
+
+.footer-top{
+	width: 40%;
+}
+
+.footer-top div, .icons{ 
+	margin: 30px 0;
+}
+
 ul{
 	list-style: none;
+	margin: 20px 0;
+}
+
+ul li{
+	padding: 10px 0;
+}
+
+i{
+	padding-right: 10px;
+}
+
+.copy{
+	justify-content: flex-end;
+}
+
+/* article queries */
+@media (max-width: 900px){
+	footer section{
+		flex-direction: column;
+	}
+
+	.footer-top{
+		width: 100%;
+	}
+	.icons, .copy{
+		align-items: center;
+		text-align: center;
+	}
 }
